; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/mISDN/extr_layer2.c_l2_released.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/mISDN/extr_layer2.c_l2_released.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.FsmInst = type { %struct.layer2* }
%struct.layer2 = type { i64 }
%struct.sk_buff = type { i32 }

@DL_RELEASE_CNF = common dso_local global i32 0, align 4
@ST_L2_4 = common dso_local global i32 0, align 4
@MDL_STATUS_DOWN_IND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.FsmInst*, i32, i8*)* @l2_released to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l2_released(%struct.FsmInst* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.FsmInst*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.layer2*, align 8
  %8 = alloca %struct.sk_buff*, align 8
  store %struct.FsmInst* %0, %struct.FsmInst** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load %struct.FsmInst*, %struct.FsmInst** %4, align 8
  %10 = getelementptr inbounds %struct.FsmInst, %struct.FsmInst* %9, i32 0, i32 0
  %11 = load %struct.layer2*, %struct.layer2** %10, align 8
  store %struct.layer2* %11, %struct.layer2** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.sk_buff*
  store %struct.sk_buff* %13, %struct.sk_buff** %8, align 8
  %14 = load %struct.layer2*, %struct.layer2** %7, align 8
  %15 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %16 = call i32 @get_PollFlag(%struct.layer2* %14, %struct.sk_buff* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %23, label %18

18:                                               ; preds = %3
  %19 = load %struct.FsmInst*, %struct.FsmInst** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @l2_mdl_error_ua(%struct.FsmInst* %19, i32 %20, i8* %21)
  br label %42

23:                                               ; preds = %3
  %24 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %25 = call i32 @dev_kfree_skb(%struct.sk_buff* %24)
  %26 = load %struct.layer2*, %struct.layer2** %7, align 8
  %27 = call i32 @stop_t200(%struct.layer2* %26, i32 6)
  %28 = load %struct.layer2*, %struct.layer2** %7, align 8
  %29 = load i32, i32* @DL_RELEASE_CNF, align 4
  %30 = call i32 @lapb_dl_release_l2l3(%struct.layer2* %28, i32 %29)
  %31 = load %struct.FsmInst*, %struct.FsmInst** %4, align 8
  %32 = load i32, i32* @ST_L2_4, align 4
  %33 = call i32 @mISDN_FsmChangeState(%struct.FsmInst* %31, i32 %32)
  %34 = load %struct.layer2*, %struct.layer2** %7, align 8
  %35 = getelementptr inbounds %struct.layer2, %struct.layer2* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %23
  %39 = load %struct.layer2*, %struct.layer2** %7, align 8
  %40 = load i32, i32* @MDL_STATUS_DOWN_IND, align 4
  %41 = call i32 @l2_tei(%struct.layer2* %39, i32 %40, i32 0)
  br label %42

42:                                               ; preds = %18, %38, %23
  ret void
}

declare dso_local i32 @get_PollFlag(%struct.layer2*, %struct.sk_buff*) #1

declare dso_local i32 @l2_mdl_error_ua(%struct.FsmInst*, i32, i8*) #1

declare dso_local i32 @dev_kfree_skb(%struct.sk_buff*) #1

declare dso_local i32 @stop_t200(%struct.layer2*, i32) #1

declare dso_local i32 @lapb_dl_release_l2l3(%struct.layer2*, i32) #1

declare dso_local i32 @mISDN_FsmChangeState(%struct.FsmInst*, i32) #1

declare dso_local i32 @l2_tei(%struct.layer2*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
